sumo/tests/dfrouter/errors/detector_files/false_detectors_file2_deprecated/errors.dfrouter
Warning: Please remark that using ';' as a file divider is deprecated since version 0.9.7
 In near future, only ',' will be accepted as file divider.
Error: Could not open detector file 'xxx.det.xml'
Quitting (on error).
